--- a/file.ipynb
+++ b/file.ipynb
@@ -10,8 +10,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +29,41 @@
     " \n",
     "from dotenv import dotenv_values \n",
     "import pyodbc\n",
+    "\n",
+    "#visualization \n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "#statistical analysis\n",
+    "\n",
+    "#feature processing \n",
+    "\n",
+    "#modelling \n",
+    "\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     " "
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data loading "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading data remotely from a SQL server "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +74,301 @@
     "database = environment_variables.get(\"DATABASE\")\n",
     "username = environment_variables.get(\"USERNAME\")\n",
     "password = environment_variables.get(\"PASSWORD\")\n",
-    "connection_string = f\"DRIVER={{ODBC Driver 18 for SQL Server}};SERVER={server};DATABASE={database};UID={username};PWD={password}\""
+    "connection_string = f\"DRIVER={{ODBC Driver 18 for SQL Server}};SERVER={server};DATABASE={database};UID={username};PWD={password}\"\n",
+    "\n",
+    "connection = pyodbc.connect(connection_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>dcoilwtico</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-01-02</td>\n",
+       "      <td>93.139999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-01-03</td>\n",
+       "      <td>92.970001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-01-04</td>\n",
+       "      <td>93.120003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-01-07</td>\n",
+       "      <td>93.199997</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date  dcoilwtico\n",
+       "0  2013-01-01         NaN\n",
+       "1  2013-01-02   93.139999\n",
+       "2  2013-01-03   92.970001\n",
+       "3  2013-01-04   93.120003\n",
+       "4  2013-01-07   93.199997"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Query the first table 'oil' in the database\n",
+    "query1 = 'SELECT * FROM dbo.oil'\n",
+    "oil_df = pd.read_sql(query1, connection)\n",
+    "oil_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>type</th>\n",
+       "      <th>locale</th>\n",
+       "      <th>locale_name</th>\n",
+       "      <th>description</th>\n",
+       "      <th>transferred</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2012-03-02</td>\n",
+       "      <td>Holiday</td>\n",
+       "      <td>Local</td>\n",
+       "      <td>Manta</td>\n",
+       "      <td>Fundacion de Manta</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2012-04-01</td>\n",
+       "      <td>Holiday</td>\n",
+       "      <td>Regional</td>\n",
+       "      <td>Cotopaxi</td>\n",
+       "      <td>Provincializacion de Cotopaxi</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2012-04-12</td>\n",
+       "      <td>Holiday</td>\n",
+       "      <td>Local</td>\n",
+       "      <td>Cuenca</td>\n",
+       "      <td>Fundacion de Cuenca</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2012-04-14</td>\n",
+       "      <td>Holiday</td>\n",
+       "      <td>Local</td>\n",
+       "      <td>Libertad</td>\n",
+       "      <td>Cantonizacion de Libertad</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2012-04-21</td>\n",
+       "      <td>Holiday</td>\n",
+       "      <td>Local</td>\n",
+       "      <td>Riobamba</td>\n",
+       "      <td>Cantonizacion de Riobamba</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date     type    locale locale_name                    description  \\\n",
+       "0  2012-03-02  Holiday     Local       Manta             Fundacion de Manta   \n",
+       "1  2012-04-01  Holiday  Regional    Cotopaxi  Provincializacion de Cotopaxi   \n",
+       "2  2012-04-12  Holiday     Local      Cuenca            Fundacion de Cuenca   \n",
+       "3  2012-04-14  Holiday     Local    Libertad      Cantonizacion de Libertad   \n",
+       "4  2012-04-21  Holiday     Local    Riobamba      Cantonizacion de Riobamba   \n",
+       "\n",
+       "   transferred  \n",
+       "0        False  \n",
+       "1        False  \n",
+       "2        False  \n",
+       "3        False  \n",
+       "4        False  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Query the second table 'holidays_events' in the database\n",
+    "query2 = 'SELECT * FROM dbo.holidays_events'\n",
+    "holidays_events_df = pd.read_sql(query2, connection)\n",
+    "holidays_events_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store_nbr</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>type</th>\n",
+       "      <th>cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Quito</td>\n",
+       "      <td>Pichincha</td>\n",
+       "      <td>D</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Quito</td>\n",
+       "      <td>Pichincha</td>\n",
+       "      <td>D</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Quito</td>\n",
+       "      <td>Pichincha</td>\n",
+       "      <td>D</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Quito</td>\n",
+       "      <td>Pichincha</td>\n",
+       "      <td>D</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Santo Domingo</td>\n",
+       "      <td>Santo Domingo de los Tsachilas</td>\n",
+       "      <td>D</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   store_nbr           city                           state type  cluster\n",
+       "0          1          Quito                       Pichincha    D       13\n",
+       "1          2          Quito                       Pichincha    D       13\n",
+       "2          3          Quito                       Pichincha    D        8\n",
+       "3          4          Quito                       Pichincha    D        9\n",
+       "4          5  Santo Domingo  Santo Domingo de los Tsachilas    D        4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Query the third table 'stores' in the database\n",
+    "query3 = 'SELECT * FROM dbo.stores'\n",
+    "stores_df = pd.read_sql(query3, connection)\n",
+    "stores_df.head()"
    ]
   }
  ],
