--- a/file.ipynb
+++ b/file.ipynb
@@ -6,7 +6,47 @@
    "metadata": {},
    "source": [
     "# PROJECT TITLE:\n",
-    "Store sales -Time series forecasting "
+    "Corporation Favorita Store sales -Time series forecasting "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Business Understanding"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Introduction\n",
+    "This project focuses on time series forecasting to predict store sales for Corporation Favorita, a large Ecuadorian-based grocery retailer. The objective is to build a model that accurately predicts the unit sales for thousands of items sold at different Favorita stores.\n",
+    "\n",
+    "\n",
+    "### 1.1. Objectives\n",
+    "Understand the data: The first objective is to gain insights into the store sales data, including store-specific information, product families, promotions, and sales numbers. This understanding will enable the company to make informed business decisions.\n",
+    "\n",
+    "Predict store sales: Develop a reliable time series forecasting model that accurately predicts the unit sales for different product families at various Favorita stores. This will help the company optimize inventory management, plan promotions, and improve overall sales performance.\n",
+    "\n",
+    "### 1.2. Methodology\n",
+    "To achieve the objectives, we will follow a structured approach:\n",
+    "\n",
+    "Data Exploration: Thoroughly explore the provided datasets to understand the available features, their distributions, and relationships. This step will provide initial insights into the store sales data and help identify any data quality issues.\n",
+    "\n",
+    "Data Preparation: Handle missing values, perform feature engineering, and encode categorical variables as necessary. This step may involve techniques like imputation, scaling, and one-hot encoding.\n",
+    "\n",
+    "Time Series Analysis: Analyze the temporal aspects of the data, including trends, seasonality, and potential outliers. This analysis will provide a deeper understanding of the underlying patterns in store sales over time.\n",
+    "\n",
+    "Model Selection and Training: Select appropriate time series forecasting models and train them using the prepared data. Consider incorporating external factors like promotions, holidays, and oil prices, if available, to enhance the forecasting accuracy.\n",
+    "\n",
+    "Model Evaluation: Evaluate the trained models using appropriate metrics, such as mean absolute error (MAE), root mean squared error (RMSE), or mean absolute percentage error (MAPE). Assess the models' performance and identify the most accurate and reliable forecasting model.\n",
+    "\n",
+    "Model Deployment and Forecasting: Deploy the chosen model to predict store sales for future time periods, leveraging the provided test dataset. Generate forecasts for the target period and assess the model's ability to capture the sales patterns accurately.\n",
+    "\n",
+    "By following this framework, we are going to predict store sales of Corporation Favorita."
    ]
   },
   {
@@ -372,6 +412,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading the train and test datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -569,6 +617,602 @@
    "source": [
     "test_data= pd.read_csv(r'C:\\Users\\Said Ahmed\\Desktop\\personalprojects\\LP3-Reggression-project\\Data\\test.csv')\n",
     "test_data.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading the transaction dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>store_nbr</th>\n",
+       "      <th>transactions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>25</td>\n",
+       "      <td>770</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-01-02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-01-02</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-01-02</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-01-02</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1922</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date  store_nbr  transactions\n",
+       "0  2013-01-01         25           770\n",
+       "1  2013-01-02          1          2111\n",
+       "2  2013-01-02          2          2358\n",
+       "3  2013-01-02          3          3487\n",
+       "4  2013-01-02          4          1922"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trans_data= pd.read_csv(r'C:\\Users\\Said Ahmed\\Desktop\\personalprojects\\LP3-Reggression-project\\Data\\transactions.csv')\n",
+    "trans_data.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Questions and Hypothesis"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hypothesis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Questions\n",
+    "1. Is the train dataset complete (has all the required dates)?\n",
+    "2. Which dates have the lowest and highest sales for each year?\n",
+    "3. Determine if certain groups of stores sell more products\n",
+    "4. Are sales affected by promotions, oil prices and holidays?\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploratory Data Analysis (EDA), Data Preprocessing & Cleaning "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Understanding \n",
+    "performing an in-depth analysis of the datasets , that is going to help in finding issues with the data and find ways of how to clean and pre-process it."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "STEP 1: Checking the shape of the datasets "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3000888, 6)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(28512, 5)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shapes of Each Dataset:\n",
+      "Holiday Events Dataset: (350, 6)\n",
+      "Oil Dataset: (1218, 2)\n",
+      "Stores Dataset: (54, 5)\n",
+      "Transactions Dataset: (83488, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print out the shapes of the other datasets\n",
+    "print(\"Shapes of Each Dataset:\")\n",
+    "print(f\"Holiday Events Dataset: {holidays_events_df.shape}\")\n",
+    "print(f\"Oil Dataset: {oil_df.shape}\")\n",
+    "print(f\"Stores Dataset: {stores_df.shape}\")\n",
+    "print(f\"Transactions Dataset: {trans_data.shape}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The train dataset is larger compared to the test dataset, train data is usually large to provide enough data for model training.\n",
+    "\n",
+    "The Holiday Events dataset provides information about various holidays and events.\n",
+    "\n",
+    "The Oil dataset includes information about the daily price of oil.\n",
+    "\n",
+    "The Stores dataset provides details about different stores, such as their locations, types, and clusters.\n",
+    "\n",
+    "The Transactions dataset contains information about the number of transactions made at each store on specific dates."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "STEP 2:Checking the column info of the datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3000888 entries, 0 to 3000887\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column       Dtype  \n",
+      "---  ------       -----  \n",
+      " 0   id           int64  \n",
+      " 1   date         object \n",
+      " 2   store_nbr    int64  \n",
+      " 3   family       object \n",
+      " 4   sales        float64\n",
+      " 5   onpromotion  int64  \n",
+      "dtypes: float64(1), int64(3), object(2)\n",
+      "memory usage: 137.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 28512 entries, 0 to 28511\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   id           28512 non-null  int64 \n",
+      " 1   date         28512 non-null  object\n",
+      " 2   store_nbr    28512 non-null  int64 \n",
+      " 3   family       28512 non-null  object\n",
+      " 4   onpromotion  28512 non-null  int64 \n",
+      "dtypes: int64(3), object(2)\n",
+      "memory usage: 1.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_data.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The \"date\" column in both datasets of type object. It needs to be converted to a datetime data type for further analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 83488 entries, 0 to 83487\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   date          83488 non-null  object\n",
+      " 1   store_nbr     83488 non-null  int64 \n",
+      " 2   transactions  83488 non-null  int64 \n",
+      "dtypes: int64(2), object(1)\n",
+      "memory usage: 1.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "trans_data.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The \"date\" column in the dataset is of type object. It needs to be converted to a datetime data type for further analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1218 entries, 0 to 1217\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   date        1218 non-null   object \n",
+      " 1   dcoilwtico  1175 non-null   float64\n",
+      "dtypes: float64(1), object(1)\n",
+      "memory usage: 19.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "oil_df.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The \"date\" column in the dataset is of type object. It needs to be converted to a datetime data type for further analysis.\n",
+    "- The 'dcoilwtico' column has 1,175 non-null values, indicating that there are some missing values in this column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 54 entries, 0 to 53\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   store_nbr  54 non-null     int64 \n",
+      " 1   city       54 non-null     object\n",
+      " 2   state      54 non-null     object\n",
+      " 3   type       54 non-null     object\n",
+      " 4   cluster    54 non-null     int64 \n",
+      "dtypes: int64(2), object(3)\n",
+      "memory usage: 2.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "stores_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 350 entries, 0 to 349\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   date         350 non-null    object\n",
+      " 1   type         350 non-null    object\n",
+      " 2   locale       350 non-null    object\n",
+      " 3   locale_name  350 non-null    object\n",
+      " 4   description  350 non-null    object\n",
+      " 5   transferred  350 non-null    bool  \n",
+      "dtypes: bool(1), object(5)\n",
+      "memory usage: 14.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "holidays_events_df.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The \"date\" column in the dataset is of type object. It needs to be converted to a datetime data type for further analysis."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "STEP 3: Change the 'date' columns to the correct datetime format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3000888 entries, 0 to 3000887\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column       Dtype         \n",
+      "---  ------       -----         \n",
+      " 0   id           int64         \n",
+      " 1   date         datetime64[ns]\n",
+      " 2   store_nbr    int64         \n",
+      " 3   family       object        \n",
+      " 4   sales        float64       \n",
+      " 5   onpromotion  int64         \n",
+      "dtypes: datetime64[ns](1), float64(1), int64(3), object(1)\n",
+      "memory usage: 137.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train dataset\n",
+    "train_data['date'] = pd.to_datetime(train_data['date'])\n",
+    "train_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 28512 entries, 0 to 28511\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column       Non-Null Count  Dtype         \n",
+      "---  ------       --------------  -----         \n",
+      " 0   id           28512 non-null  int64         \n",
+      " 1   date         28512 non-null  datetime64[ns]\n",
+      " 2   store_nbr    28512 non-null  int64         \n",
+      " 3   family       28512 non-null  object        \n",
+      " 4   onpromotion  28512 non-null  int64         \n",
+      "dtypes: datetime64[ns](1), int64(3), object(1)\n",
+      "memory usage: 1.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test dataset\n",
+    "test_data['date'] = pd.to_datetime(test_data['date'])\n",
+    "test_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "RangeIndex: 350 entries, 0 to 349\n",
+      "Series name: date\n",
+      "Non-Null Count  Dtype         \n",
+      "--------------  -----         \n",
+      "350 non-null    datetime64[ns]\n",
+      "dtypes: datetime64[ns](1)\n",
+      "memory usage: 2.9 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Holiday Events dataset\n",
+    "holidays_events_df['date'] = pd.to_datetime(holidays_events_df['date'])\n",
+    "holidays_events_df['date'].info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('<M8[ns]')"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Oil dataset\n",
+    "oil_df['date'] = pd.to_datetime(oil_df['date'])\n",
+    "oil_df['date'].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('<M8[ns]')"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Transactions dataset\n",
+    "trans_data['date'] = pd.to_datetime(trans_data['date'])\n",
+    "trans_data['date'].dtype"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The columns are now formatted correctly "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "STEP 4: Perform Summary Statistics of the datasets"
    ]
   }
  ],
