modify the notebook

--- a/file.ipynb
+++ b/file.ipynb
@@ -94,6 +94,9 @@
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "import pickle\n",
     "from statsmodels.tsa.stattools import kpss\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "\n",
     "\n",
     "import warnings\n",
     "\n",
@@ -7401,6 +7404,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Average sales by cities"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -7434,7 +7445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. Are sales affected by promotions, oil prices and holidays?"
+    "#### 5. Are sales affected by promotions, oil prices and holidays?"
    ]
   },
   {
@@ -8080,156 +8091,20 @@
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>store_nbr</th>\n",
-       "      <th>family</th>\n",
-       "      <th>sales</th>\n",
-       "      <th>onpromotion</th>\n",
-       "      <th>city</th>\n",
-       "      <th>cluster</th>\n",
-       "      <th>transactions</th>\n",
-       "      <th>holiday_type</th>\n",
-       "      <th>dcoilwtico</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>day</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>AUTOMOTIVE</td>\n",
-       "      <td>-0.325920</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Quito</td>\n",
-       "      <td>13</td>\n",
-       "      <td>-1.273993</td>\n",
-       "      <td>Holiday</td>\n",
-       "      <td>1.342694</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>2</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>CLEANING</td>\n",
-       "      <td>-0.325920</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Quito</td>\n",
-       "      <td>13</td>\n",
-       "      <td>-1.273993</td>\n",
-       "      <td>Holiday</td>\n",
-       "      <td>1.342694</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>2</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>BEAUTY</td>\n",
-       "      <td>-0.325920</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Quito</td>\n",
-       "      <td>13</td>\n",
-       "      <td>-1.273993</td>\n",
-       "      <td>Holiday</td>\n",
-       "      <td>1.342694</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>2</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>FOODS</td>\n",
-       "      <td>-0.187976</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Quito</td>\n",
-       "      <td>13</td>\n",
-       "      <td>-1.273993</td>\n",
-       "      <td>Holiday</td>\n",
-       "      <td>1.342694</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>2</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>STATIONERY</td>\n",
-       "      <td>-0.325920</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Quito</td>\n",
-       "      <td>13</td>\n",
-       "      <td>-1.273993</td>\n",
-       "      <td>Holiday</td>\n",
-       "      <td>1.342694</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>2</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   store_nbr      family     sales  onpromotion   city  cluster  transactions  \\\n",
-       "0          1  AUTOMOTIVE -0.325920            0  Quito       13     -1.273993   \n",
-       "1          1    CLEANING -0.325920            0  Quito       13     -1.273993   \n",
-       "2          1      BEAUTY -0.325920            0  Quito       13     -1.273993   \n",
-       "3          1       FOODS -0.187976            0  Quito       13     -1.273993   \n",
-       "4          1  STATIONERY -0.325920            0  Quito       13     -1.273993   \n",
-       "\n",
-       "  holiday_type  dcoilwtico  year  month  day  \n",
-       "0      Holiday    1.342694  2013      2   11  \n",
-       "1      Holiday    1.342694  2013      2   11  \n",
-       "2      Holiday    1.342694  2013      2   11  \n",
-       "3      Holiday    1.342694  2013      2   11  \n",
-       "4      Holiday    1.342694  2013      2   11  "
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Scaling Numeric Variables (Min-Max Scaling)\n",
-    "# create an instance of StandardScaler\n",
-    "scaler = StandardScaler()\n",
+    "# # Scaling Numeric Variables (Min-Max Scaling)\n",
+    "# # create an instance of StandardScaler\n",
+    "# scaler = StandardScaler()\n",
     "\n",
-    "# select numerical columns\n",
-    "num_cols = ['sales', 'transactions', 'dcoilwtico']\n",
+    "# # select numerical columns\n",
+    "# num_cols = ['sales', 'transactions', 'dcoilwtico']\n",
     "\n",
-    "# fit and transform the numerical columns\n",
-    "merged_data[num_cols] = scaler.fit_transform(merged_data[num_cols])\n",
+    "# # fit and transform the numerical columns\n",
+    "# merged_data[num_cols] = scaler.fit_transform(merged_data[num_cols])\n",
     "\n",
-    "# Display the updated dataframe\n",
-    "merged_data.head()"
+    "# # Display the updated dataframe\n",
+    "# merged_data.head()"
    ]
   },
   {
@@ -8301,11 +8176,11 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>-0.325920</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>13</td>\n",
-       "      <td>-1.273993</td>\n",
-       "      <td>1.342694</td>\n",
+       "      <td>396</td>\n",
+       "      <td>97.010002</td>\n",
        "      <td>2013</td>\n",
        "      <td>2</td>\n",
        "      <td>11</td>\n",
@@ -8325,11 +8200,11 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>-0.325920</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>13</td>\n",
-       "      <td>-1.273993</td>\n",
-       "      <td>1.342694</td>\n",
+       "      <td>396</td>\n",
+       "      <td>97.010002</td>\n",
        "      <td>2013</td>\n",
        "      <td>2</td>\n",
        "      <td>11</td>\n",
@@ -8349,11 +8224,11 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>-0.325920</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>13</td>\n",
-       "      <td>-1.273993</td>\n",
-       "      <td>1.342694</td>\n",
+       "      <td>396</td>\n",
+       "      <td>97.010002</td>\n",
        "      <td>2013</td>\n",
        "      <td>2</td>\n",
        "      <td>11</td>\n",
@@ -8373,11 +8248,11 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
-       "      <td>-0.187976</td>\n",
+       "      <td>172.0</td>\n",
        "      <td>0</td>\n",
        "      <td>13</td>\n",
-       "      <td>-1.273993</td>\n",
-       "      <td>1.342694</td>\n",
+       "      <td>396</td>\n",
+       "      <td>97.010002</td>\n",
        "      <td>2013</td>\n",
        "      <td>2</td>\n",
        "      <td>11</td>\n",
@@ -8397,11 +8272,11 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
-       "      <td>-0.325920</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>13</td>\n",
-       "      <td>-1.273993</td>\n",
-       "      <td>1.342694</td>\n",
+       "      <td>396</td>\n",
+       "      <td>97.010002</td>\n",
        "      <td>2013</td>\n",
        "      <td>2</td>\n",
        "      <td>11</td>\n",
@@ -8424,12 +8299,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   store_nbr     sales  onpromotion  cluster  transactions  dcoilwtico  year  \\\n",
-       "0          1 -0.325920            0       13     -1.273993    1.342694  2013   \n",
-       "1          1 -0.325920            0       13     -1.273993    1.342694  2013   \n",
-       "2          1 -0.325920            0       13     -1.273993    1.342694  2013   \n",
-       "3          1 -0.187976            0       13     -1.273993    1.342694  2013   \n",
-       "4          1 -0.325920            0       13     -1.273993    1.342694  2013   \n",
+       "   store_nbr  sales  onpromotion  cluster  transactions  dcoilwtico  year  \\\n",
+       "0          1    0.0            0       13           396   97.010002  2013   \n",
+       "1          1    0.0            0       13           396   97.010002  2013   \n",
+       "2          1    0.0            0       13           396   97.010002  2013   \n",
+       "3          1  172.0            0       13           396   97.010002  2013   \n",
+       "4          1    0.0            0       13           396   97.010002  2013   \n",
        "\n",
        "   month  day  family_AUTOMOTIVE  ...  city_Quevedo  city_Quito  \\\n",
        "0      2   11                1.0  ...           0.0         1.0   \n",
@@ -9121,18 +8996,18 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Linear Regression</td>\n",
-       "      <td>0.27</td>\n",
-       "      <td>0.84</td>\n",
-       "      <td>0.71</td>\n",
-       "      <td>0.37</td>\n",
+       "      <td>2.87</td>\n",
+       "      <td>1047.01</td>\n",
+       "      <td>1096230.33</td>\n",
+       "      <td>466.32</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Model  RMSLE  RMSE   MSE   MAE\n",
-       "0  Linear Regression   0.27  0.84  0.71  0.37"
+       "               Model  RMSLE     RMSE         MSE     MAE\n",
+       "0  Linear Regression   2.87  1047.01  1096230.33  466.32"
       ]
      },
      "execution_count": 67,
@@ -9216,18 +9091,18 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ARIMA</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>1.09</td>\n",
-       "      <td>1.19</td>\n",
-       "      <td>0.5</td>\n",
+       "      <td>3.44</td>\n",
+       "      <td>1358.37</td>\n",
+       "      <td>1845156.98</td>\n",
+       "      <td>618.57</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Model  RMSLE  RMSE   MSE  MAE\n",
-       "0  ARIMA   0.45  1.09  1.19  0.5"
+       "   Model  RMSLE     RMSE         MSE     MAE\n",
+       "0  ARIMA   3.44  1358.37  1845156.98  618.57"
       ]
      },
      "execution_count": 68,
@@ -9321,18 +9196,18 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>1.31</td>\n",
+       "      <td>878.39</td>\n",
+       "      <td>771563.98</td>\n",
+       "      <td>315.15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Model  RMSLE  RMSE   MSE   MAE\n",
-       "0  Random Forest   0.23   0.7  0.49  0.25"
+       "           Model  RMSLE    RMSE        MSE     MAE\n",
+       "0  Random Forest   1.31  878.39  771563.98  315.15"
       ]
      },
      "execution_count": 69,
@@ -9414,39 +9289,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_estimators = [int(x) for x in np.linspace(start = 200, stop = 800, num = 3)]\n",
-    "# Number of features to consider at every split\n",
-    "max_features = ['auto', 'sqrt']\n",
-    "# # Minimum number of samples required to split a node\n",
-    "min_samples_split = [2, 5, 10]\n",
-    "# # Create the random grid\n",
-    "random_grid = {'n_estimators': n_estimators,\n",
-    "               'max_features': max_features,\n",
-    "               'min_samples_split': min_samples_split}"
+    "# # Define the model\n",
+    "# lr_model = LinearRegression()\n",
+    "\n",
+    "# # Define the hyperparameter grid for grid search\n",
+    "# param_grid = {\n",
+    "#     'n_estimators': [100, 200, 300],\n",
+    "#     'max_depth': [None, 10, 20],\n",
+    "#     'min_samples_split': [2, 5, 10],\n",
+    "#     'min_samples_leaf': [1, 2, 4],\n",
+    "#     'max_features': ['auto', 'sqrt']\n",
+    "# }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 18 candidates, totalling 54 fits\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Use the random grid to search for best hyperparameters\n",
-    "# First create the base model to tune\n",
-    "rf = RandomForestRegressor()\n",
-    "# Random search of parameters, using 3 fold cross validation,\n",
-    "# search across 100 different combinations, and use all available cores\n",
-    "rf_random = RandomizedSearchCV(estimator = rf, param_distributions = random_grid, n_iter = 100, cv = 3, verbose=2, random_state=42, n_jobs = -1)\n",
-    "# Fit the random search model\n",
-    "rf_random.fit(X_train, y_train)"
+    "# Define the model\n",
+    "lr_model = LinearRegression()\n",
+    "# Define the hyperparameter grid for grid search\n",
+    "param_grid = {\n",
+    "    'fit_intercept': [True, False],\n",
+    "    'normalize': [True, False]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform grid search\n",
+    "grid_search = GridSearchCV(estimator=lr_model, param_grid=param_grid, \n",
+    "                           cv=3, n_jobs=1, verbose=2)  # Set n_jobs=1\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Print the best parameters and best score\n",
+    "print(\"Best parameters found: \", grid_search.best_params_)\n",
+    "print(\"Best score found: \", grid_search.best_score_)"
    ]
   },
   {
